steke amount put max on mobile fixed

--- a/src/Components/Modals/Disconnect.css
+++ b/src/Components/Modals/Disconnect.css
@@ -131,3 +131,12 @@
     }
   }
   
+    
+  @media screen and (max-width: 375px){
+    .modal-button-close, .modal-button{
+     
+      width: 60%;
+
+    }
+
+  }
